[package]
name = "pleme-health"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "pleme-health library"
repository = "https://github.com/pleme-io/pleme-health"
homepage = "https://github.com/pleme-io/pleme-health"
readme = "README.md"

[dependencies]
axum = { version = "0.8.7", features = ["http1", "http2", "json", "query", "tokio", "tower-log"] }
tokio = { version = "1.41", features = ["full"] }
sqlx = { version = "0.8", default-features = false, features = ["chrono", "json", "macros", "migrate", "postgres", "runtime-tokio", "uuid"] }
redis = { version = "0.24", features = ["connection-manager", "streams", "tokio-comp"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-manual-roots-no-provider"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tracing = "0.1"


